--- a/TestWebApp/Views/Home/Index.cshtml
+++ b/TestWebApp/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Ehsan Ali hi its my first MS build jenkins have picked it up</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.Also i have added some new features in it just for check </p>
+    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.Also check for build 8 </p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
